--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
     <nav class="nav">
       <ul>
         <li><a href="#Why">Why "Time to count"?</a></li>
-        <li><a href="#Enjoy">Enjoying every moment</a></li>
-        <li><a href="#Simple">Simple app</a></li>
+        <li><a href="#Enjoy">Enjoying Ticket To Ride</a></li>
+        <li><a href="#Simple">How the app works</a></li>
         <li><a href="#Bonuses">Bonuses for all extensions</a></li>
         <li><a href="#Links">Useful Links</a></li>
       </ul>
@@ -235,7 +235,7 @@
         in each game board variant.</p>
     </section>
     <section>
-      <h1 id="Enjoy">Enjoying every moment of play</h1>
+      <h1 id="Enjoy">Enjoying every moment of play of Ticket To Ride</h1>
       <p> Let's be realistic, it isn't always easy to find the time to play a Ticket to Ride game. And you not only need
         time, you need other players to be with you and have the time to play.</p>
       <p>Deciding on playing a game is to start to enjoy this game. If you have more than one game board then you can
@@ -256,9 +256,9 @@
         like all the rest of the moments!</p>
     </section>
     <section>
-      <h1 id="Simple">Simple app mechanics</h1>
+      <h1 id="Simple">How the app works</h1>
       <div class="center">
-        <img alt="Time to count Screen" src="Screenshot.png">
+        <img alt="Time to count logo" src="timetocount.png">
       </div>
       <p>The app knows all the differences for each game board variant. So all you have to do is input the information
         on
@@ -287,6 +287,9 @@
         those that went uncompleted as well. You tap on the buttons for complete and incomplete to switch between
         these.
       </p>
+      <div class="center">
+        <img alt="Time to count Screen" src="Screenshot.png">
+      </div>
     </section>
     <section>
       <h1 id="Bonuses">Bonuses for all extensions made easy</h1>
