Youtube link fixed

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         Time
         to
         count app directly from the Google Play Store!</p>
-      <iframe width="420" height="315" src="https://youtu.be/bPEgwLlF7Gg">
+      <iframe width="420" height="315" src="https://www.youtube.com/embed/bPEgwLlF7Gg">
       </iframe>
       <center class="center"><a href="https://play.google.com/store/apps/details?id=com.timetocount"><img
             src="google-play-store.png" alt="Download on the Google Play Store"></a></center>
