--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
         Time
         to
         count app directly from the Google Play Store!</p>
-      <iframe src="https://www.youtube.com/embed/bPEgwLlF7Gg">
+      <iframe style="width:100%; height:100%;" src="https://www.youtube.com/embed/bPEgwLlF7Gg/?rel=0" frameborder="0"
+        allowfullscreen>
       </iframe>
       <center class="center"><a href="https://play.google.com/store/apps/details?id=com.timetocount"><img
             src="google-play-store.png" alt="Download on the Google Play Store"></a></center>
