--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         routes
         for the purpose of checking how many were left unused at the end of the game. </p>
       <img src="india.jpeg" alt="India game board" width="600" class="center">
-      <p>The <b>India</b> game board offers players the change to win the Grand Tour Bonus according to mandalas built.
+      <p>The <b>India</b> game board offers players the chance to win the Grand Tour Bonus according to mandalas built.
         For
         each player input the amount of destination tickets completed inside a mandala and the app awards the bonus
         according to the table in the rules.</p>
@@ -365,13 +365,13 @@
         cards
         that would require that points be counted during game play. In order to count all points at the end then it is
         required to take note of some simple information.</p>
-      <p>If the Steam Turbines card is bought by a player you need to take note of how many ferries where built at the
+      <p>If the Steam Turbines card is bought by a player you need to take note of how many ferries were built at the
         time
         the card is bought. At the time to count moment you enter that number and the total number of built ferries. The
         app
-        awards the corresponding bouns for ferries built after the card was bought.</p>
+        awards the corresponding bonus for ferries built after the card was bought.</p>
       <p>Similarly, if the Double Heading card is bought the information for routes built at the time the card is bought
-        needs to be noted. At the time to count moment, the correspoding award is given for all routes built after the
+        needs to be noted. At the time to count moment, the corresponding award is given for all routes built after the
         card
         was bought.</p>
       <p>If a player buys the Equalising Beam card then the information for longest route must be completed just as it
@@ -398,7 +398,7 @@
         who built the route also has a city then you do not need to take special note because the route needs to be
         counted
         for normally; but if the player does not own a city then you need to put the point value for that route with a
-        negative sign for that player. This is done to substract the points that will be counted at the end. So at the
+        negative sign for that player. This is done to subtract the points that will be counted at the end. So at the
         game
         end you just input the sum of all the numbers you input for each player during game play.</p>
     </section>
