Added link to tutorial video

--- a/index.html
+++ b/index.html
@@ -236,6 +236,10 @@
       <p>The "Time to count" app makes it much easier to add up points for the Ticket to Ride game. You can add the
         names of the players that play the games. The app also keeps history of all played games and shows best scores
         in each game board variant.</p>
+      <p>You can watch the full tutorial video.</p>
+      <iframe style="width:100%; height:100%;" src="https://www.youtube.com/embed/T3w4lEcxRj8/?rel=0" frameborder="0"
+        allowfullscreen>
+      </iframe>
     </section>
     <section>
       <h1 id="Enjoy">Enjoying every moment of play of Ticket To Ride</h1>
