--- a/index.html
+++ b/index.html
@@ -899,9 +899,13 @@
           negative sign for that player. This is done to subtract the points that will be counted at the end. So at the
           game
           end you just input the sum of all the numbers you input for each player during game play.</p>
-        <p>Two of the small map variants have their own bonuses. For <b>New York</b> indicate how many attractions were
+        <p>The three small map variants have their own bonuses. For <b>New York</b> indicate how many attractions were
           visited for each player.
-          For the <b>London</b> game, each player indicates which districts were completed.</p>
+          For the <b>London</b> game, each player indicates which districts were completed. And, for the
+          <b>Amsterdam</b> game indicate the number of merchandise cards won.</p>
+        <p>For the latest expansion each game bonus is managed differently. For <b>Japan</b> the progress in the bullet
+          train track race is indicated. For <b>Italy</b> the amount of connected regions is indicated for each player.
+          A player could have more than one network, so the information for each network is added accordingly.</p>
       </section>
       <section>
         <h1 id="Useful Links">
