--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,207 @@
+<head>
+    <link rel="shortcut icon" type="image/x-icon" href="ic_launcher.png">
+    <meta http-equiv=Content-Type content="text/html; charset=utf-8">
+    <title>Ticket to Ride - Time To Count - Score Assistant</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Time to count will help you to count final score in Ticket to Ride for all players and all game board variants.">
+    <meta name="author" content="Daniele Folatelli">
+    <meta name="keywords"
+        content="app, Android App, Ticket to Ride, Board, Board Game, TTR, Game Setup, Board Setup, Utility, Score Assistant, Train Game">
+    <style>
+        html,
+        body,
+        div,
+        ul,
+        ol,
+        li,
+        dl,
+        dt,
+        dd,
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6,
+        pre,
+        form,
+        p,
+        blockquote,
+        fieldset,
+        input,
+        abbr,
+        article,
+        aside,
+        details,
+        figcaption,
+        figure,
+        footer,
+        header,
+        hgroup,
+        mark,
+        meter,
+        nav,
+        output,
+        progress,
+        section,
+        summary,
+        time {
+            margin: 0;
+            padding: 0;
+        }
 
+        article,
+        aside,
+        footer,
+        header,
+        hgroup,
+        nav,
+        section,
+        figure,
+        figcaption {
+            display: block;
+        }
+
+        html {
+            height: 100%;
+        }
+
+        body {
+            font-family: 'Lucida Grande', 'Lucida Sans Unicode', Helvetica, Arial, Verdana, sans-serif;
+            font-weight: normal;
+            font-size: 16px;
+            height: 100%;
+            -webkit-font-smoothing: antialiased;
+        }
+
+        h1 {
+            margin-bottom: 0.25em;
+            line-height: 1.5em;
+            color: #333;
+        }
+
+        ul li,
+        ol li {
+            padding-bottom: 1em;
+            list-style-position: outside;
+            margin-left: 20px;
+        }
+
+        ul li {
+            list-style-type: disc;
+        }
+
+        ol li {
+            list-style-type: lower-alpha;
+        }
+
+        ul li ul {
+            padding-top: 1em;
+            margin-bottom: -1em;
+        }
+
+        p {
+            margin-bottom: 24px;
+        }
+
+        p.center {
+            text-align: center;
+        }
+
+        img {
+            max-width: 100%;
+            border: 0;
+            margin-bottom: 0.25em;
+            margin-top: 0.25em;
+        }
+
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 100%;
+        }
+
+        @media only screen and (min-device-width: 568px) {
+            .center {
+                width: 50%;
+            }
+        }
+
+        .nav {
+            border-bottom: 1px solid #ced0d5;
+        }
+
+        .nav ul {
+            display: inline-block;
+            margin-top: 20px;
+        }
+
+        .wrapper {
+            line-height: 1.5em;
+            max-width: 980px;
+            margin: 0 auto;
+            padding: 0 70px;
+            border: 0;
+            min-height: 100%;
+            background-color: #fff;
+            color: #556;
+        }
+
+        .footer {
+            font-size: 12px;
+            text-align: center;
+            clear: both;
+            padding-top: 24px;
+            padding-bottom: 24px;
+        }
+
+        a {
+            color: #0070c9;
+            text-decoration: none;
+        }
+
+        .nav ul li {
+            float: left;
+            margin-left: 0;
+            margin-right: 30px;
+            list-style-type: none;
+        }
+
+        section {
+            padding: 10px 0;
+            clear: both;
+            border-bottom: 1px solid #CED0D5;
+            overflow: hidden;
+        }
+    </style>
+</head>
+Last updated September 2th, 2021
+
+Time to Count (“we” or “us” or “our”) respects the privacy of our users (“user” or “you”). This Privacy Policy explains
+how we collect, use, disclose, and safeguard your information when you visit our mobile application (the “Application”).
+Please read this Privacy Policy carefully. IF YOU DO NOT AGREE WITH THE TERMS OF THIS PRIVACY POLICY, PLEASE DO NOT
+ACCESS THE APPLICATION.
+
+We reserve the right to make changes to this Privacy Policy at any time and for any reason. We will alert you about any
+changes by updating the “Last updated” date of this Privacy Policy. You are encouraged to periodically review this
+Privacy Policy to stay informed of updates. You will be deemed to have been made aware of, will be subject to, and will
+be deemed to have accepted the changes in any revised Privacy Policy by your continued use of the Application after the
+date such revised Privacy Policy is posted.
+
+This Privacy Policy does not apply to the third-party online/mobile store from which you install the Application or make
+payments, including any in-game virtual items, which may also collect and use data about you. We are not responsible for
+any of the data collected by any such third party.
+
+COLLECTION OF YOUR INFORMATION
+
+We do not collect any type of information with the Time To Count app.
+
+CONTACT US
+
+If you have questions or comments about this Privacy Policy, please contact us at:
+
+daniele.folatelli@gmail.com
+
+</html>
