Update format privacy

--- a/privacy.html
+++ b/privacy.html
@@ -177,31 +177,38 @@
         }
     </style>
 </head>
-Last updated September 2th, 2021
+<p>Last updated September 2th, 2021</p>
 
-Time to Count (“we” or “us” or “our”) respects the privacy of our users (“user” or “you”). This Privacy Policy explains
-how we collect, use, disclose, and safeguard your information when you visit our mobile application (the “Application”).
-Please read this Privacy Policy carefully. IF YOU DO NOT AGREE WITH THE TERMS OF THIS PRIVACY POLICY, PLEASE DO NOT
-ACCESS THE APPLICATION.
+<p>Time to Count (“we” or “us” or “our”) respects the privacy of our users (“user” or “you”). This Privacy Policy
+    explains
+    how we collect, use, disclose, and safeguard your information when you visit our mobile application (the
+    “Application”).
+    Please read this Privacy Policy carefully. IF YOU DO NOT AGREE WITH THE TERMS OF THIS PRIVACY POLICY, PLEASE DO NOT
+    ACCESS THE APPLICATION.</p>
 
-We reserve the right to make changes to this Privacy Policy at any time and for any reason. We will alert you about any
-changes by updating the “Last updated” date of this Privacy Policy. You are encouraged to periodically review this
-Privacy Policy to stay informed of updates. You will be deemed to have been made aware of, will be subject to, and will
-be deemed to have accepted the changes in any revised Privacy Policy by your continued use of the Application after the
-date such revised Privacy Policy is posted.
+<p>We reserve the right to make changes to this Privacy Policy at any time and for any reason. We will alert you about
+    any
+    changes by updating the “Last updated” date of this Privacy Policy. You are encouraged to periodically review this
+    Privacy Policy to stay informed of updates. You will be deemed to have been made aware of, will be subject to, and
+    will
+    be deemed to have accepted the changes in any revised Privacy Policy by your continued use of the Application after
+    the
+    date such revised Privacy Policy is posted.</p>
 
-This Privacy Policy does not apply to the third-party online/mobile store from which you install the Application or make
-payments, including any in-game virtual items, which may also collect and use data about you. We are not responsible for
-any of the data collected by any such third party.
+<p>This Privacy Policy does not apply to the third-party online/mobile store from which you install the Application or
+    make
+    payments, including any in-game virtual items, which may also collect and use data about you. We are not responsible
+    for
+    any of the data collected by any such third party.</p>
 
-COLLECTION OF YOUR INFORMATION
+<h6>COLLECTION OF YOUR INFORMATION</h6>
 
-We do not collect any type of information with the Time To Count app.
+<p>We do not collect any type of information with the Time To Count app.</p>
 
-CONTACT US
+<h6>CONTACT US</h6>
 
-If you have questions or comments about this Privacy Policy, please contact us at:
+<p>If you have questions or comments about this Privacy Policy, please contact us at:</p>
 
-daniele.folatelli@gmail.com
+<p>daniele.folatelli@gmail.com</p>
 
 </html>
