Adding change log option

--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
         <li><a href="#Enjoy">Enjoying Ticket To Ride</a></li>
         <li><a href="#Simple">How the app works</a></li>
         <li><a href="#Bonuses">Bonuses for all extensions</a></li>
+        <li><a href="https://timetocount.com/changelog.html">App Change Log</a></li>
         <li><a href="#Links">Useful Links</a></li>
       </ul>
     </nav>
@@ -194,10 +195,8 @@
         Ticket to Ride: One of the absolute best board games ever!
       </h1>
       <img src="rsz_family.jpg" alt="Ticket to Ride on table" width="900" class="center">
-      <p>Ticket to Ride is one of the best board games ever! It is an absolute favorite to play with family or
-        friends!
-        Even
-        if you own one game board you never get tired of playing it over and over.</p>
+      <p>Ticket to Ride is one of the best board games ever! It is an absolute favorite to play with family and
+        friends! Even if you own one game board you never get tired of playing it over and over.</p>
       <p>If you have never played the game I suggest you watch this quick <a
           href="https://daroolz.com/howtoplay/tickettoride/">video</a> to learn the game.</p>
     </section>
@@ -318,6 +317,8 @@
         have the most of something. For example the globetrotter bonus for the most complete destination tickets. For
         these bonuses the app has the All Players button that allows you to see how all players rank to obtain the
         bonus.</p>
+      <p>Help screens are availabe on every screen and for every bonus that explain in detail how to use the app and
+        score the points.</p>
       <p>The <b>globetrotter bonus</b> is automatically awarded to the player (or players in case of a tie) that have
         the
         most completed destination tickets. The app knows how many points to award for each game board variant.</p>
