Change log information for all releases

--- a/changelog.html
+++ b/changelog.html
@@ -190,8 +190,64 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.3.5 Sep 21st, 2021</h4>
       <ul>
-        <li>0.0.1 Jun 4th, 2021 - Initial Test Release</li>
+        <li>Pink Play expansion now available for Time to Count.</li>
+      </ul>
+      <h4>1.3.3 Sep 14th, 2021</h4>
+      <ul>
+        <li>Improved help screens</li>
+      </ul>
+      <h4>1.3.2 Sep 9th, 2021</h4>
+      <ul>
+        <li>New help screens</li>
+      </ul>
+      <h4>1.3.1 Sep 3rd, 2021</h4>
+      <h6>Minor bug fixes</h6>
+      <ul>
+        <li>Player name no longer truncates</li>
+        <li>Fixed issue on some devices that required 2 taps to input data</li>
+        <li>Fixed issue 7 train car route for Old West</li>
+      </ul>
+      <h6>Enhancements</h6>
+      <ul>
+        <li>Game list now in alphabetical order</li>
+        <li>Improved sound for incomplete destination tickets</li>
+        <li>Label indicates set owned games in settings</li>
+        <li>Label indicates set custom player names in settings</li>
+        <li>Custom player show original name for color</li>
+        <li>Number input is now standard</li>
+        <li>Improved color for white player</li>
+      </ul>
+      <h4>1.3 Aug 24th, 2021</h4>
+      <ul>
+        <li>Improved app sounds</li>
+      </ul>
+      <h4>1.2 Aug 23rd, 2021</h4>
+      <ul>
+        <li>The two latest expansions added: Amsterdam and Japan/Italy</li>
+        <li>Free version can now change player names</li>
+        <li>Minor bugs fixed</li>
+      </ul>
+      <h4>1.1.2 Aug 18th, 2021</h4>
+      <ul>
+        <li>Updates to page titles</li>
+      </ul>
+      <h4>1.1.1 Aug 3rd, 2021</h4>
+      <ul>
+        <li>Improved images in destination tickets.</li>
+        <li>Improvements for input of numbers in all pages.</li>
+        <li>Improved colors of meeples for Germany extension.</li>
+        <li>Improved text coloring for Nederland extension.</li>
+      </ul>
+      <h4>1.1 Jul 12th, 2021</h4>
+      <ul>
+        <li>Added New York, London and Stay at Home expansion rules.</li>
+        <li>Minor bugs fixed.</li>
+      </ul>
+      <h4>1.0 Jun 4th, 2021</h4>
+      <ul>
+        <li>Initial Release</li>
       </ul>
     </section>
   </body>
