Update with new release

--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,12 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.3.6 Sep 25st, 2021</h4>
+      <ul>
+        <li>Corrected Legendary Asia and Team Asia board games that were switched</li>
+        <li>Order of history descending to show latest games on top.</li>
+        <li>Added Restore purchases button for iOS</li>
+      </ul>
       <h4>1.3.5 Sep 21st, 2021</h4>
       <ul>
         <li>Pink Play expansion now available for Time to Count.</li>
