--- a/changelog.html
+++ b/changelog.html
@@ -190,7 +190,11 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
-      <h4>1.3.6 Sep 25st, 2021</h4>
+      <h4>1.3.7 Sep 27th, 2021</h4>
+      <ul>
+        <li>Improvements in swipe gesture to switch between players</li>
+      </ul>
+      <h4>1.3.6 Sep 25th, 2021</h4>
       <ul>
         <li>Corrected Legendary Asia and Team Asia board games that were switched</li>
         <li>Order of history descending to show latest games on top.</li>
