--- a/changelog.html
+++ b/changelog.html
@@ -190,58 +190,63 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.4 Sep 30th, 2021</h4>
+      <ul>
+        <li>Alvin & Dexter expansion added.</li>
+        <li>Minor improvements to how History is displayed.</li>
+      </ul>
       <h4>1.3.7 Sep 27th, 2021</h4>
       <ul>
-        <li>Improvements in swipe gesture to switch between players</li>
+        <li>Improvements in swipe gesture to switch between players.</li>
       </ul>
       <h4>1.3.6 Sep 25th, 2021</h4>
       <ul>
-        <li>Corrected Legendary Asia and Team Asia board games that were switched</li>
+        <li>Corrected Legendary Asia and Team Asia board games that were switched.</li>
         <li>Order of history descending to show latest games on top.</li>
-        <li>Added Restore purchases button for iOS</li>
+        <li>Added Restore purchases button for iOS.</li>
       </ul>
       <h4>1.3.5 Sep 21st, 2021</h4>
       <ul>
-        <li>Pink Play expansion now available for Time to Count.</li>
+        <li>Pink Play expansion added.</li>
       </ul>
       <h4>1.3.3 Sep 14th, 2021</h4>
       <ul>
-        <li>Improved help screens</li>
+        <li>Improved help screens.</li>
       </ul>
       <h4>1.3.2 Sep 9th, 2021</h4>
       <ul>
-        <li>New help screens</li>
+        <li>New help screens.</li>
       </ul>
       <h4>1.3.1 Sep 3rd, 2021</h4>
       <h6>Minor bug fixes</h6>
       <ul>
-        <li>Player name no longer truncates</li>
-        <li>Fixed issue on some devices that required 2 taps to input data</li>
-        <li>Fixed issue 7 train car route for Old West</li>
+        <li>Player name no longer truncates.</li>
+        <li>Fixed issue on some devices that required 2 taps to input data.</li>
+        <li>Fixed issue 7 train car route for Old West.</li>
       </ul>
       <h6>Enhancements</h6>
       <ul>
-        <li>Game list now in alphabetical order</li>
-        <li>Improved sound for incomplete destination tickets</li>
-        <li>Label indicates set owned games in settings</li>
-        <li>Label indicates set custom player names in settings</li>
-        <li>Custom player show original name for color</li>
-        <li>Number input is now standard</li>
-        <li>Improved color for white player</li>
+        <li>Game list now in alphabetical order.</li>
+        <li>Improved sound for incomplete destination tickets.</li>
+        <li>Label indicates set owned games in settings.</li>
+        <li>Label indicates set custom player names in settings.</li>
+        <li>Custom player show original name for color.</li>
+        <li>Number input is now standard.</li>
+        <li>Improved color for white player.</li>
       </ul>
       <h4>1.3 Aug 24th, 2021</h4>
       <ul>
-        <li>Improved app sounds</li>
+        <li>Improved app sounds.</li>
       </ul>
       <h4>1.2 Aug 23rd, 2021</h4>
       <ul>
-        <li>The two latest expansions added: Amsterdam and Japan/Italy</li>
-        <li>Free version can now change player names</li>
-        <li>Minor bugs fixed</li>
+        <li>The two latest expansions added: Amsterdam and Japan/Italy.</li>
+        <li>Free version can now change player names.</li>
+        <li>Minor bugs fixed.</li>
       </ul>
       <h4>1.1.2 Aug 18th, 2021</h4>
       <ul>
-        <li>Updates to page titles</li>
+        <li>Updates to page titles.</li>
       </ul>
       <h4>1.1.1 Aug 3rd, 2021</h4>
       <ul>
@@ -257,7 +262,7 @@
       </ul>
       <h4>1.0 Jun 4th, 2021</h4>
       <ul>
-        <li>Initial Release</li>
+        <li>Initial Release.</li>
       </ul>
     </section>
   </body>
