--- a/changelog.html
+++ b/changelog.html
@@ -190,7 +190,13 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
-      <h4>1.4 Sep 30th, 2021</h4>
+      <h4>1.4.1 Oct 5th, 2021</h4>
+      <ul>
+        <li>Help screens in Spanish added.</li>
+        <li>Minor improvements to English help screens.</li>
+        <li>Nordic Countries colors corrected.</li>
+      </ul>
+      <h4>1.4 Oct 1st, 2021</h4>
       <ul>
         <li>Alvin & Dexter expansion added.</li>
         <li>Minor improvements to how History is displayed.</li>
