--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,11 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.5 Oct 14th, 2021</h4>
+      <ul>
+        <li>Poland map added.</li>
+        <li>User without Full Version in European countries has Europe map, rest of the world has US map.</li>
+      </ul>
       <h4>1.4.1 Oct 5th, 2021</h4>
       <ul>
         <li>Help screens in Spanish added.</li>
