--- a/index.html
+++ b/index.html
@@ -441,9 +441,18 @@
         For the <b>London</b> game, each player indicates which districts were completed. And, for the
         <b>Amsterdam</b> game indicate the number of merchandise cards won.
       </p>
-      <p>For the latest expansion each game bonus is managed differently. For <b>Japan</b> the progress in the bullet
+      <p>For <b>Japan</b> the progress in the bullet
         train track race is indicated. For <b>Italy</b> the amount of connected regions is indicated for each player.
         A player could have more than one network, so the information for each network is added accordingly.</p>
+      <p>The <b>Poland</b> map is also available in Time To Count. You indicate what country cards were gained during
+        the game and the bonuses are added accordingly.</p>
+      <p>For those who have Alvin & Dexter, they can indicate they own the expansion on the Settings page. Then they can
+        click on the Alvin & Dexter button on the Tally page to then count bonus points using the Alvin & Dexter rules.
+        You can indicate destination tickets that correspond to cities were Alvin & Dexter ended the game. Also you can
+        indicate the number of Alvin cards and Dexter cards to add those bonuses to each player's scores.
+      </p>
+      <p>Owners of the Play Pink expansion can indicate they own the expansion in the Settting page. The pink
+        trains will be available across all maps.</p>
     </section>
     <section>
       <h1 id="Useful Links">
