--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,11 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.5 Oct 19th, 2021</h4>
+      <ul>
+        <li>New option to use any custom maps or non-standard game. Save them for re-use in the settings screen.</li>
+        <li>New help screen for all settings.</li>
+      </ul>
       <h4>1.5 Oct 14th, 2021</h4>
       <ul>
         <li>Poland map added.</li>
