--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,10 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.6.1 Oct 20th, 2021</h4>
+      <ul>
+        <li>Fix inconsistency in history for deletion of custom maps.</li>
+      </ul>
       <h4>1.6 Oct 19th, 2021</h4>
       <ul>
         <li>New option to use any custom maps or non-standard game. Save them for re-use in the settings screen.</li>
