--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,11 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.6.2 Oct 22nd, 2021</h4>
+      <ul>
+        <li>New option to copy from standard map to create custom map.</li>
+        <li>Improved method for calculating bonus points for Italy map.</li>
+      </ul>
       <h4>1.6.1 Oct 20th, 2021</h4>
       <ul>
         <li>Fix inconsistency in history for deletion of custom maps.</li>
