--- a/index.html
+++ b/index.html
@@ -442,8 +442,10 @@
         <b>Amsterdam</b> game indicate the number of merchandise cards won.
       </p>
       <p>For <b>Japan</b> the progress in the bullet
-        train track race is indicated. For <b>Italy</b> the amount of connected regions is indicated for each player.
-        A player could have more than one network, so the information for each network is added accordingly.</p>
+        train track race is indicated. The <b>Italy</b> map is one of the more prone fo making mistakes while counting
+        the bonus scores. In order to avoid erros you mark on the list of regions which are connected. The regions are
+        presented from North to South and it is easy to double check if necessary. A player could have more than one
+        network, so the information for each network is added accordingly.</p>
       <p>The <b>Poland</b> map is also available in Time To Count. You indicate what country cards were gained during
         the game and the bonuses are added accordingly.</p>
       <p>For those who have Alvin & Dexter, they can indicate they own the expansion on the Settings page. Then they can
