--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,10 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.7.2 Oct 28th, 2021</h4>
+      <ul>
+        <li>Halloween Freighter expansion added.</li>
+      </ul>
       <h4>1.6.2 Oct 22nd, 2021</h4>
       <ul>
         <li>New option to copy from standard map to create custom map.</li>
