--- a/index.html
+++ b/index.html
@@ -455,6 +455,8 @@
       </p>
       <p>Owners of the Play Pink expansion can indicate they own the expansion in the Settting page. The pink
         trains will be available across all maps.</p>
+      <p>If you own the Halloween Freighter expansion select it the frightful pumpkin trains and spooky stations will be
+        available on any map.</p>
       <p>In the settings page add any home made or custom maps you own. You can also add variants to the rules for
         standard maps. Name them appropiately so you can later select them as any other map. You can indicate the number
         of train cars used and if it uses the longest continous path or globetrotter bonuses. For each of these two
