--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,10 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.7.3 Nov 1st, 2021</h4>
+      <ul>
+        <li>Various bug fixes..</li>
+      </ul>
       <h4>1.7.2 Oct 28th, 2021</h4>
       <ul>
         <li>Halloween Freighter expansion added.</li>
