Add google analytics

--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QNPDJB3STX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-QNPDJB3STX');
+  </script>
   <link rel="shortcut icon" type="image/x-icon" href="ic_launcher.png">
   <meta http-equiv=Content-Type content="text/html; charset=utf-8">
   <title>Ticket to Ride - Time To Count - Score Assistant</title>
