--- a/changelog.html
+++ b/changelog.html
@@ -190,9 +190,19 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.7.5 Jan 21st, 2022</h4>
+      <ul>
+        <li>New screens to view personal top scores.</li>
+        <li>Top scores now sorted by game expansion.</li>
+        <li>The USA 1910 expansion option is added to always use Globetrotter bonus.</li>
+      </ul>
+      <h4>1.7.4 Jan 8th, 2022</h4>
+      <ul>
+        <li>Various bug fixes.</li>
+      </ul>
       <h4>1.7.3 Nov 1st, 2021</h4>
       <ul>
-        <li>Various bug fixes..</li>
+        <li>Various bug fixes.</li>
       </ul>
       <h4>1.7.2 Oct 28th, 2021</h4>
       <ul>
