--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,11 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.7.6 Jan 26th, 2022</h4>
+      <ul>
+        <li>Legendary Asia corrected to allow 5 players.</li>
+        <li>Various small improvements.</li>
+      </ul>
       <h4>1.7.5 Jan 21st, 2022</h4>
       <ul>
         <li>New screens to view personal top scores.</li>
