--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,10 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.7.7 Feb 17th, 2022</h4>
+      <ul>
+        <li>Orient Express expansion added.</li>
+      </ul>
       <h4>1.7.6 Jan 26th, 2022</h4>
       <ul>
         <li>Legendary Asia corrected to allow 5 players.</li>
