Added Fast Words page and updated copyright 2022

--- a/changelog.html
+++ b/changelog.html
@@ -7,7 +7,7 @@
     content="Time to count will help you to count final score in Ticket to Ride for all players and all game board variants.">
   <meta name="author" content="Daniele Folatelli">
   <meta name="keywords"
-    content="app, Android App, Ticket to Ride, Board, Board Game, TTR, Game Setup, Board Setup, Utility, Score Assistant, Train Game">
+    content="app, Android App, iOS App, Ticket to Ride, Board, Board Game, TTR, Game Setup, Board Setup, Utility, Score Assistant, Train Game">
   <style>
     html,
     body,
@@ -325,7 +325,7 @@
     </p>
     <p><a href="mailto:daniele.folatelli@gmail.com">Contact me</a> if you have encountered a problem with the app,
       have a suggestion, or want to share your thoughts.</p>
-    <p>Copyright &copy; 2021 Daniele Folatelli.</p>
+    <p>Copyright &copy; 2022 Daniele Folatelli.</p>
     <p>Icons by <a href="https://incons8.com">Icons8</a></p>
   </footer>
 </div>
