--- a/index.html
+++ b/index.html
@@ -342,7 +342,10 @@
       <img src="europe.jpeg" alt="Playing Europe game" width="600" class="center">
       <p>The <b>Europe</b> variant has the stations that need to be counted for bonus points. Indicate how many
         stations
-        were used and the app will award 4 points per each unused station as bonus.</p>
+        were used and the app will award 4 points per each unused station as bonus. If you own the 1912 and/or Orient
+        Express expansions no action is needed, all destination tickets are included. If you own the 1912 expansion and
+        want to play with wharehouses and depots then use the Depots button. The 10 point bonus is awarded to the
+        player(s) with most unused depot</p>
       <p>The <b>Märklin</b> variant include the merchandise tokens bonus. Input the final number of merchandise tokens
         per
         each player.</p>
