--- a/changelog.html
+++ b/changelog.html
@@ -181,7 +181,7 @@
 
   <body lang=en-ES word-wrap:break-word'>
     <nav class="nav">
-      <a href="https://timetocount.com/">Back to Home Page</a>
+      <a href="https://danielefolatelli.github.io/">Back to Home Page</a>
     </nav>
     <section>
       <h1>
