--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <li><a href="#Enjoy">Enjoying Ticket To Ride</a></li>
         <li><a href="#Simple">How the app works</a></li>
         <li><a href="#Bonuses">Bonuses for all extensions</a></li>
-        <li><a href="https://timetocount.com/changelog.html">App Change Log</a></li>
+        <li><a href="https://danielefolatelli.github.io/changelog.html">App Change Log</a></li>
         <li><a href="#Links">Useful Links</a></li>
       </ul>
     </nav>
