--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
       </p>
     </section>
     <section>
-      <h1 id="Useful Links">
+      <h1 id="Links">
         Links
       </h1>
       <p>You can find all the game rules in PDF and
