--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,18 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.9 Jun 23rd, 2022</h4>
+      <ul>
+        <li>Added San Francisco expansion.</li>
+      </ul>
+      <h4>1.8.2 May 30th, 2022</h4>
+      <ul>
+        <li>Update the developer web page.</li>
+      </ul>
+      <h4>1.8.1 May 23rd, 2022</h4>
+      <ul>
+        <li>Maintenance update.</li>
+      </ul>
       <h4>1.8 Mar 21st, 2022</h4>
       <ul>
         <li>Depots bonus from 1912 expansion added for Europe map.</li>
