--- a/index.html
+++ b/index.html
@@ -458,8 +458,10 @@
         the bonus scores. In order to avoid erros you mark on the list of regions which are connected. The regions are
         presented from North to South and it is easy to double check if necessary. A player could have more than one
         network, so the information for each network is added accordingly.</p>
-      <p>The <b>Poland</b> map is also available in Time To Count. You indicate what country cards were gained during
+      <p>The <b>Poland</b> map is available in Time To Count. You indicate what country cards were gained during
         the game and the bonuses are added accordingly.</p>
+      <p>The <b>San Francisco</b> map is also available in Time To Count. You indicate how many tourist tokens each
+        player gained and the bonuses are added accordingly.</p>
       <p>For those who have Alvin & Dexter, they can indicate they own the expansion on the Settings page. Then they can
         click on the Alvin & Dexter button on the Tally page to then count bonus points using the Alvin & Dexter rules.
         You can indicate destination tickets that correspond to cities were Alvin & Dexter ended the game. Also you can
