--- a/changelog.html
+++ b/changelog.html
@@ -190,7 +190,13 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
-      <h4>1.9 Jun 23rd, 2022</h4>
+      <h4>1.9.1 Jul 4th, 2022</h4>
+      <ul>
+        <li>Added option for ports with no destination tickets in Rails and Sails expansion.</li>
+        <li>Improved semantics for United Kingdom cards.</li>
+        <li>Improved messages on feedback option.</li>
+      </ul>
+      <h4>1.9 Jun 26th, 2022</h4>
       <ul>
         <li>Added San Francisco expansion.</li>
       </ul>
