--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,11 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.9.2 Jul 9th, 2022</h4>
+      <ul>
+        <li>United Kingdom map help improved.</li>
+        <li>Bug corrected for some Android phones that could not send feedback.</li>
+      </ul>
       <h4>1.9.1 Jul 4th, 2022</h4>
       <ul>
         <li>Added option for ports with no destination tickets in Rails and Sails expansion.</li>
