--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,15 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.9.4 Jul 31st, 2022</h4>
+      <ul>
+        <li>Fixed bug when sound is on.</li>
+      </ul>
+      <h4>1.9.3 Jul 28th, 2022</h4>
+      <ul>
+        <li>Latest maintenance update.</li>
+        <li>Improved database creation for history feature.</li>
+      </ul>
       <h4>1.9.2 Jul 9th, 2022</h4>
       <ul>
         <li>United Kingdom map help improved.</li>
