--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,10 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.9.5 Aug 3rd, 2022</h4>
+      <ul>
+        <li>Improved player selection.</li>
+      </ul>
       <h4>1.9.4 Jul 31st, 2022</h4>
       <ul>
         <li>Fixed bug when sound is on.</li>
