--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,12 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.10 Aug 7th, 2022</h4>
+      <ul>
+        <li>Improved Owned Games interaction.</li>
+        <li>Various bugs fixed for History feature.</li>
+        <li>Bug fixed for Custom Maps feature.</li>
+      </ul>
       <h4>1.9.5 Aug 3rd, 2022</h4>
       <ul>
         <li>Improved player selection.</li>
