--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,10 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.11 Oct 17th, 2022</h4>
+      <ul>
+        <li>Spanish language option now has all screens in Spanish.</li>
+      </ul>
       <h4>1.10 Aug 7th, 2022</h4>
       <ul>
         <li>Improved Owned Games interaction.</li>
