--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,11 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.11.1 Nov 15th, 2022</h4>
+      <ul>
+        <li>Maintenance release.</li>
+        <li>Misspelled words corrected.</li>
+      </ul>
       <h4>1.11 Oct 17th, 2022</h4>
       <ul>
         <li>Spanish language option now has all screens in Spanish.</li>
