--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
         available on any map.</p>
       <p>In the settings page add any home made or custom maps you own. You can also add variants to the rules for
         standard maps. Name them appropiately so you can later select them as any other map. You can indicate the number
-        of train cars used and if it uses the longest continous path or globetrotter bonuses. For each of these two
+        of train cars used and if it uses the longest continuous path or globetrotter bonuses. For each of these two
         bonuses you can indicate how many points are awarded. When scoring points you will be able to add other bonus
         points as well.
       </p>
