--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,10 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+      <h4>1.11.2 Dec 5th, 2022</h4>
+      <ul>
+        <li>Bug fixed on Bonus screen.</li>
+      </ul>
       <h4>1.11.1 Nov 15th, 2022</h4>
       <ul>
         <li>Maintenance release.</li>
