--- a/changelog.html
+++ b/changelog.html
@@ -190,6 +190,11 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
+
+      <h4>1.12.0 Mar 22nd, 2023</h4>
+      <ul>
+        <li>Northern Lights game added.</li>
+      </ul>
       <h4>1.11.2 Dec 5th, 2022</h4>
       <ul>
         <li>Bug fixed on Bonus screen.</li>
