--- a/changelog.html
+++ b/changelog.html
@@ -190,7 +190,10 @@
       <div class="center">
         <img alt="Time to count logo" src="timetocount.png">
       </div>
-
+      <h4>1.12.1 Jun 6th, 2023</h4>
+      <ul>
+        <li>Maintenance and minor bug fixes.</li>
+      </ul>
       <h4>1.12.0 Mar 22nd, 2023</h4>
       <ul>
         <li>Northern Lights game added.</li>
