--- a/todousado.html
+++ b/todousado.html
@@ -121,7 +121,7 @@
 
     @media only screen and (min-device-width: 568px) {
       .center {
-        width: 50%;
+        width: 90%;
       }
     }
 
@@ -129,7 +129,7 @@
       line-height: 1.5em;
       max-width: 980px;
       margin: 0 auto;
-      padding: 0 70px;
+      padding: 0 20px;
       border: 0;
       min-height: 100%;
       background-color: #fff;
@@ -178,6 +178,7 @@
                 <div>Descripción</div>
                 <div>Precio</div>
                 <div>Disponibilidad</div>
+                <div>Foto</div>
             </li>
             <!--Fin Titulo-->
             <li>
@@ -185,12 +186,14 @@
                 <div class="item">Cosa</div>
                 <div class="item">15 USD</div>
                 <div class="item">Ahora</div>
+                <div><img alt="Time to count logo" src="https://media.publit.io/file/USADOS00001.png"></div>
             </li>
             <li>
                 <div class="numero"></div>
                 <div class="item">Mas Cosa</div>
                 <div class="item">30000 Pesos</div>
                 <div class="item">Marzo</div>
+                <div></div>
             </li>
         </ul>
     </section>
