--- a/todousado.html
+++ b/todousado.html
@@ -166,8 +166,9 @@
 <div class="wrapper">
 
   <body lang=en-ES word-wrap:break-word>
-    <script>
+    <script type = "text/javascript">
       function show() {
+        alert(pasa)
           document.getElementById('image00001')
               .style.display = "block";
           document.getElementById('showID00001')
@@ -187,7 +188,7 @@
     </script>
     <section>
       <h1>
-        Todo usado version 2
+        Todo usado version 3
       </h1>
       <!--<img src="rsz_family.jpg" alt="Ticket to Ride on table" width="900" class="center">-->
       <p>Todos los productos son usados y se retiran por mi domicilio.</p>
