--- a/todousado.html
+++ b/todousado.html
@@ -168,7 +168,7 @@
   <body lang=en-ES word-wrap:break-word>
     <script type = "text/javascript">
       function show() {
-        alert(pasa)
+        alert(pasa);
           document.getElementById('image00001')
               .style.display = "block";
           document.getElementById('showID00001')
@@ -188,7 +188,7 @@
     </script>
     <section>
       <h1>
-        Todo usado version 3
+        Todo usado version 4
       </h1>
       <!--<img src="rsz_family.jpg" alt="Ticket to Ride on table" width="900" class="center">-->
       <p>Todos los productos son usados y se retiran por mi domicilio.</p>
