--- a/todousado.html
+++ b/todousado.html
@@ -168,7 +168,7 @@
   <body lang=en-ES word-wrap:break-word>
     <script type = "text/javascript">
       function show() {
-        alert(pasa);
+        alert("pasa");
           document.getElementById('image00001')
               .style.display = "block";
           document.getElementById('showID00001')
